byteplus_k8s/devops/ingress/bob-data-dev-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bob-data-ingress
  namespace: bob-data-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.bobdev.link
    secretName: bobdev-link-tls  # 引用上面创建的Secret
  rules:
    - host: api.bobdev.link
      http:
        paths:
          - backend:
              service:
                name: bob-data-near-api-dev-svc
                port:
                  number: 8080
            path: /api/v1/near/dev
            pathType: Prefix
          - backend:
              service:
                name: bob-data-near-api-test-svc
                port:
                  number: 8080
            path: /api/v1/near/test
            pathType: Prefix
          - backend:
              service:
                name: bob-data-near-api-dev-svc
                port:
                  number: 8080
            path: /swagger
            pathType: Prefix
